using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis
{
    public const string HORIZONTAL = "Horizontal";
    public const string VERTICAL = "Vertical";
}

public class MouseAxis
{
    public const string Mouse_X = "Mouse X";
    public const string Mouse_y = "Mouse Y";
}
public class AnimationTag
{
    public const string zoomInAnim = "ZoomIn";
    public const string zoomOutAnim = "ZoomOut";

    public const string shootTrigger = "shoot";
    public const string AimParam = "Aim";

    public const string WalkParam = "Walk";
    public const string RunParam = "Run";
    public const string AttackTrigger = "Attack";
    public const string DeadTrigger = "Dead";

}

public class Tags
{
    public const string LookRoot = "Look Root";
    public const string zoomCamera = "FP Camera";
    public const string CrossHair = "CrossHair";
    public const string ArrowTag = "Arrow";

    public const string AxeTag = "Axe";

    public const string PlayerTag = "Player";
    public const string EnemyTag = "Enemy";
}